Fixed overflow issue with the log contents

--- a/css/KapostBridgeLogViewer.css
+++ b/css/KapostBridgeLogViewer.css
@@ -40,7 +40,7 @@
 }
 
 .KapostBridgeLogViewer #RequestFormatted pre, .KapostBridgeLogViewer #ResponseFormatted pre {
-    max-width: 95%;
+    max-height: 500px;
     
     overflow: auto;
 }
